* Restore tab default order when no manual change
* Call autocompletion when setting record value
* Remove database management
* Limit readonly state for xxx2Many
* Show records names in relate window title
* Add support for count on Action Window Domains
* Manage custom login process
* Add clear icon on Many2One
* Re-position icons on Many2One widget

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Improvement of charts design
* Timedelta uses 30 days for month
* Add all available encoding for import/export
* Add CSV parameters to export window
* Add DnD on import window
* Manage context model of ir.action.act_window
* Add Note
* Manage view_ids on tree view
* Use Apple key for copy/past of list

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)
* Use italic labels for editable fields
* Escape '_' in button string and page string
* Export selected records only
* Use HTML for RichText widget
* Change Progressbar to work with float between 0 and 1
* Add Fast Tabbing option
* Remove colors on widgets
* Bold label of required fields
* Explicit error message for invalid record
* Add reversed operators to PYSON expressions

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Hide columns containing always the same value
* Remove Tabs Position option
* Manage product attribute
* Remove float_time widget
* Add TimeDelta field
* Improve date/time widgets
* Remove datetime widget on list/tree view
* Allow to put many times the same field on tree view
* Add search completion on dictionary widget
* Merge host and port field in profile editor
* New color scheme for graph
* Replace img_{width,height} by width and height attributes

Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)
* Add DnD on export window
* Allow to overide predefined export
* Prefill export window with current view fields
* Manage field context on Group value
* Add export of selection string